@@ -15,6 +15,16 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Implement feature request 1025952: GTK Client - Save Pickup options.
+New setup command, 'want_pickup', which makes server send 'pickup xxx' when
+ player joins.
+Modified files;
+ doc/Developers/protocol
+ include/newserver.h sockproto.h
+ server/login.c
+ socket/request.c
+Ryo 2007-02-18
+
 Make containers with an other_arch face display it when opened.
  server/apply.c
 Aaron Baugher 2007-02-15
